subnet.tf
resource "aws_subnet" "publicsubnets" {
    count =3
    vpc_id = aws_vpc.ms.id
    cidr_block =element(var.public_cidr_block, count.index)
    availability_zone = element(var.azs, count.index)
    map_public_ip_on_launch = true
    tags = {
      Name = "${var.vpc_name}-public-subnet-${count.index + 1}"
    }
  
}

resource "aws_subnet" "privatesubnets" {
    count =3
    vpc_id = aws_vpc.ms.id
    cidr_block =element(var.private_cidr_block, count.index)
    availability_zone = element(var.azs, count.index)
    tags = {
      Name = "${var.vpc_name}-private-subnet-${count.index + 1}"
    }
  
}
